# test

cartographer_ros_pr2/: CMakeLists.txt  README.md  package.xml
cartographer_ros_pr2/configuration_files/: 2d_localization.rviz  pr2_3d.lua  pr2_3d_no_odom_simulation.lua  pr2_3d_only_laser_realmachine.lua  pr2_3d_only_laser_simulation.lua  remote.rviz  robot_localization_imu_mocap.yaml  turtlebot_depth_camera_2d_gazebo.lua  turtlebot_depth_camera_2d_gazebo_localization.lua  turtlebot_velodyne.rviz  velodyne_spinal.lua  velodyne_spinal.rviz  velodyne_spinal_hand.rviz  velodyne_spinal_localization.lua  velodyne_spinal_turtlebot.lua  velodyne_spinal_turtlebot_localization.lua  zed_stereo.lua
cartographer_ros_pr2/include/cartographer_ros_pr2/: existing_path_global_planner.h
cartographer_ros_pr2/launch/: cartographer_pr2_2d.launch  cartographer_pr2_3d.launch  existing_path_based_move_base.launch  pr2_simulation.launch  robot_localization_imu_mocap.launch  set_initpose.launch  teleop_keyboard.launch  turtlebot_depth_camera_2d_gazebo.launch  turtlebot_velodyne_spinal.launch  velodyne.launch  velodyne_spinal_hand.launch  velodyne_spinal_initial_pose.launch  velodyne_spinal_pure_localization.launch  zed_stereo.launch
cartographer_ros_pr2/scripts/: mocap_pose_converter.py  pr2_imu_with_gravity.py  pr2_odom.py  pr2_record.sh  reset_arm.py  spinal_imu_converter.py  turtlebot_velodyne_spinal_record.sh  velodyne_spinal_hand_record.sh
cartographer_ros_pr2/src/: existing_path_global_planner.cpp  initpose_node.cpp
cartographer_ros_pr2/urdf/: velodyne_hdl32e_spinal.urdf.xacro  velodyne_hdl32e_spinal_hand.urdf.xacro  velodyne_hdl32e_spinal_turtlebot.urdf.xacro
cartographer_ros_pr2/worlds/: turtlebot_playground.world
qp_test/: CMakeLists.txt  package.xml
qp_test/osqp-eigen/: CMakeLists.txt
qp_test/src/: mpc_example_osqp.cpp  mpc_example_qpoases.cpp
trtr/: .gitignore  CMakeLists.txt  package.xml
trtr/include/trtr/: trtr_tracker.h
trtr/launch/: sample_trtr_tracker.launch  tracker.launch
trtr/plugins/nodelet/: trtr_nodelet.xml
trtr/scripts/: benchmark_test.py  convert_trtr_models.sh  download_otb_benchmark.py  install_sample_data.py  install_tracker_models.py
trtr/src/: trtr_tracker.cpp
trtr/test/: CMakeLists.txt  benchmark.test  benchmark_test.py
